# portfolio_optimization

./: .gitignore  AGENTS.md  README.md  configuration.py  de_etf_list.py  endpoints.py  etl.py  main.py  off-test.py  pyproject.toml  requirements.txt  stock_data_downloader.py  stock_names.py  stock_optimize.py  stock_predict.py  test.py  utils.py
.github/: dependabot.yml
.github/workflows/: ci-step.yml  main.yml
config/: de_etf_list.py  stock_names.py
data/: data.csv
result/: res1.txt  res2.txt
src/: data.py  etl.py  optimization_job_repo.py  stock_data_downloader.py  stock_optimize.py  utils.py
src/data/: data.py
src/infrastructure/utils/: utils.py
src/logic/: logic.py  stock_finder.py
src/logic/data/: data.py
src/repository/: optimization_job_repo.py
src/services/: analyze.py  stock_data_downloader.py  stock_limit_transformer.py  stock_optimize.py  stock_predict.py
src/utils/: utils.py
tests/: conftest.py
tests/adapter/: __init__.py
