[tool.poetry]
name = "portfolio-optimization"
version = "0.1.0"
description = "To the moon"
authors = ["Daniil Roman <danroman17397@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
