[tool.poetry]
name = "promisingstocksfinder"
version = "0.1.0"
description = "To the moon"
authors = ["Daniil Roman <danroman17397@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pandas = "^2.2.1"
yfinance = "^0.2.54"
prophet = "^1.1.5"
telepot = "^12.7"
python-decouple = "^3.8"
beautifulsoup4 = "^4.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "src"
