[tool.poetry]
name = "promisingstocksfinder"
version = "0.1.0"
description = "To the moon"
authors = ["Daniil Roman <danroman17397@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.0"
yfinance = "^1.1.0"
prophet = "^1.3.0"
telepot = "^12.7"
python-decouple = "^3.8"
beautifulsoup4 = "^4.14.3"
deap = "^1.4.3"
numpy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "src"

[[tool.poetry.packages]]
include = "config"
